# webmofsynth

./: .gitignore  Dockerfile  README.md  app.py  index.html  mofsynth-frontend.yaml  nginx.conf  pyproject.toml  requirements.txt  submit_options.php  test_script.py  upload.php  webmofsynth-frontend.yaml
docs/: requirements.txt
images/backgrounds/: background_image.pptx
src/mofsynth/: __init__.py  cli.py  utils.py  utils_cm.py  utils_qm.py
src/mofsynth/input_data/: config.yaml  databases.xlsx  job_opt.sh  job_sp.sh  settings.txt
src/mofsynth/modules/: linkers.py  linkers_cm.py  linkers_qm.py  mof.py  mof_cm.py  mof_qm.py  other.py  other_cm.py  user.py  user_cm.py  user_qm.py
static/: results_style.css  script.js  steric.js  style.css  style_vol1.css
static/images/: error-404-concept-design-landing-page_108061-65.avif
templates/: error.html  index.html  results.html
